# fidelity-api

./: .gitignore  README.md  pyproject.toml  setup.py
fidelity/: fidelity.py
src/: fidelityAPI.py
tests/: example.py
