[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-api"
version = "0.0.1"
authors = [
  { name="kennyboy106", email="author@example.com" },
]
description = "A playwright based api for Fidelity brokerage."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kennyboy106/fidelity-api"
Issues = "https://github.com/kennyboy106/fidelity-api/issues"